--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,21 +1,22 @@
 [package]
-name = "rust-ipmi"
-version = "0.1.1"
 authors = ["Harris Temuri <harris.temuri@gmail.com>"]
-edition = "2021"
+categories = ["hardware-support", "api-bindings", "parsing"]
 description = "IPMI client library for rust"
+edition = "2021"
+exclude = ["/src/main.rs", "images/*", "docs/*", ".gitignore", ".cargo/*"]
+keywords = ["ipmi", "rmcp"]
+license = "GPL-3.0-or-later"
+name = "rust-ipmi"
 readme = "README.md"
 repository = "https://github.com/htemuri/rust-ipmi/"
-license = "GPL-3.0-or-later"
-keywords = ["ipmi", "rmcp"]
-categories = ["hardware-support", "api-bindings", "parsing"]
-exclude = ["/src/main.rs", "images/*", "docs/*", ".gitignore", ".cargo/*"]
+version = "0.1.1"
 
 [dependencies]
-bitvec = "1.0.1"
-hmac = "0.12.1"
-sha2 = "0.10.8"
 aes = "0.8.3"
-cbc = "0.1.2" 
+bitvec = "1.0.1"
+cbc = "0.1.2"
+hmac = "0.12.1"
+lazy_static = "1.4.0"
 rand = "0.8.5"
+sha2 = "0.10.8"
 thiserror = "1.0.53"
