--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,15 @@ version = "0.1.1"
 [dependencies]
 aes = "0.8.3"
 cbc = "0.1.2"
+clap = {version = "4.3.24", features = ["derive"]}
 hmac = "0.12.1"
+hmac-sha1 = "0.2.2"
 lazy_static = "1.4.0"
+log = "0.4.20"
 rand = "0.8.5"
+serde = {version = "1.0.183", features = ["derive"]}
+serde_json = "1.0.105"
 sha2 = "0.10.8"
 thiserror = "1"
+tokio = {version = "1.32.0", features = ["full"]}
+toml = "0.7.6"
