--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,7 @@ sha2 = "0.10.8"
 thiserror = "1"
 tokio = {version = "1.32.0", features = ["full"]}
 toml = "0.7.6"
+
+[dev-dependencies]
+chrono = "0.4.35"
+env_logger = "0.11.3"
